[huffman:okumura] make it work for smaf compression/decompression